--- a/Google_Colab_Notebook_Updated.ipynb
+++ b/Google_Colab_Notebook_Updated.ipynb
@@ -167,7 +167,7 @@
       "source": [
         "#@title Load your training dataset(.zip archive of .wav files) from /content/dataset (modify accordingly)\n",
         "\n",
-        "#@markdown 数据集位置\n",
+        "#@markdown Dataset location\n",
         "DATASET = \"/content/drive/MyDrive/dataset/trainsongs.zip\"  #@param {type:\"string\"}\n",
         "\n",
         "!mkdir -p /content/dataset\n",
